--- a/yaml/Openclash-Smart-test.yaml
+++ b/yaml/Openclash-Smart-test.yaml
@@ -154,21 +154,21 @@ proxy-groups:
   - {name: 🔯 新国故转, type: fallback, include-all: true, tolerance: 20, interval: 300, filter: "(?=.*(广新|新加坡|SG|坡|狮城|🇸🇬|Singapore)).*$"}
   - {name: 🔯 韩国故转, type: fallback, include-all: true, tolerance: 20, interval: 300, filter: "(?=.*(广韩|韩国|韓國|KR|首尔|春川|🇰🇷|Korea)).*$"}
   - {name: 🔯 台湾故转, type: fallback, include-all: true, tolerance: 20, interval: 300, filter: "(?=.*(台|TW|(?i)Taiwan))^((?!(港|日|韩|新|美)).)*$"}
-  - {name: 🔯 欧盟故转, type: fallback, include-all: true, tolerance: 20, interval: 300, filter: "(?i)欧盟|EU|德国|DE|法国|FR|意大利|IT|西班牙|ES|荷兰|NL|瑞典|SE|波兰|PL|爱尔兰|IE|比利时|BE|奥地利|AT|芬兰|FI|丹麦|DK|葡萄牙|PT|俄罗斯|RU|Germany|France|Italy|Spain|Netherlands|Sweden|Poland|Ireland|Belgium|Austria|Finland|Denmark|Portugal|Russia|法兰克福|Frankfurt|巴黎|Paris|阿姆斯特丹|Amsterdam"}
+  - {name: 🔯 欧盟故转, type: fallback, include-all: true, tolerance: 20, interval: 300, filter: "(?i)欧盟|EU|英国|UK|俄罗斯|RU|德国|DE|法国|FR|意大利|IT|西班牙|ES|荷兰|NL|瑞典|SE|波兰|PL|爱尔兰|IE|比利时|BE|奥地利|AT|芬兰|FI|丹麦|DK|葡萄牙|PT|英|United Kingdom|Germany|France|Italy|Spain|Netherlands|Sweden|Poland|Ireland|Belgium|Austria|Finland|Denmark|Portugal|Russia|法兰克福|Frankfurt|巴黎|Paris|阿姆斯特丹|Amsterdam|伦敦|London"}
   - {name: ⭐ 香港智能, type: smart, include-all: true, tolerance: 20, interval: 300, uselightgbm: true,collectdata: true, filter: "(?=.*(港|HK|(?i)Hong))^((?!(台|日|韩|新|深|美)).)*$", url: "http://www.gstatic.com/generate_204", lazy: true, persistent: true}
   - {name: ⭐ 日本智能, type: smart, include-all: true, tolerance: 20, interval: 300, uselightgbm: true,collectdata: true, filter: "(?=.*(日|JP|(?i)Japan))^((?!(港|台|韩|新|美|尼日利亚)).)*$", url: "http://www.gstatic.com/generate_204", lazy: true, persistent: true}
   - {name: ⭐ 美国智能, type: smart, include-all: true, tolerance: 20, interval: 300, uselightgbm: true,collectdata: true, filter: "(?=.*(广美|美|USA|United States|纽约|波特兰|达拉斯|俄勒|凤凰城|费利蒙|拉斯|洛杉|圣何塞|圣克拉|西雅|芝加))(?=^(?!.*(亚美尼亚|Armenia|洪都拉斯)).*$).*$", url: "http://www.gstatic.com/generate_204", lazy: true, persistent: true}
   - {name: ⭐ 新国智能, type: smart, include-all: true, tolerance: 20, interval: 300, uselightgbm: true,collectdata: true, filter: "(?=.*(广新|新加坡|SG|坡|狮城|🇸🇬|Singapore)).*$", url: "http://www.gstatic.com/generate_204", lazy: true, persistent: true}
   - {name: ⭐ 韩国智能, type: smart, include-all: true, tolerance: 20, interval: 300, uselightgbm: true,collectdata: true, filter: "(?=.*(广韩|韩国|韓國|KR|首尔|春川|🇰🇷|Korea)).*$", url: "http://www.gstatic.com/generate_204", lazy: true, persistent: true}
   - {name: ⭐ 台湾智能, type: smart, include-all: true, tolerance: 20, interval: 300, uselightgbm: true,collectdata: true, filter: "(?=.*(台|TW|(?i)Taiwan))^((?!(港|日|韩|新|美)).)*$", url: "http://www.gstatic.com/generate_204", lazy: true, persistent: true}
-  - {name: ⭐ 欧盟智能, type: smart, include-all: true, tolerance: 20, interval: 300, uselightgbm: true,collectdata: true, filter: "(?i)欧盟|EU|德国|DE|法国|FR|意大利|IT|西班牙|ES|荷兰|NL|瑞典|SE|波兰|PL|爱尔兰|IE|比利时|BE|奥地利|AT|芬兰|FI|丹麦|DK|葡萄牙|PT|俄罗斯|RU|Germany|France|Italy|Spain|Netherlands|Sweden|Poland|Ireland|Belgium|Austria|Finland|Denmark|Portugal|Russia|法兰克福|Frankfurt|巴黎|Paris|阿姆斯特丹|Amsterdam", url: "http://www.gstatic.com/generate_204", lazy: true, persistent: true}
+  - {name: ⭐ 欧盟智能, type: smart, include-all: true, tolerance: 20, interval: 300, uselightgbm: true,collectdata: true, filter: "(?i)欧盟|EU|英国|UK|俄罗斯|RU|德国|DE|法国|FR|意大利|IT|西班牙|ES|荷兰|NL|瑞典|SE|波兰|PL|爱尔兰|IE|比利时|BE|奥地利|AT|芬兰|FI|丹麦|DK|葡萄牙|PT|英|United Kingdom|Germany|France|Italy|Spain|Netherlands|Sweden|Poland|Ireland|Belgium|Austria|Finland|Denmark|Portugal|Russia|法兰克福|Frankfurt|巴黎|Paris|阿姆斯特丹|Amsterdam|伦敦|London", url: "http://www.gstatic.com/generate_204", lazy: true, persistent: true}
   - {name: ♻️ 香港自动, type: url-test, include-all: true, tolerance: 20, interval: 300, filter: "(?=.*(港|HK|(?i)Hong))^((?!(台|日|韩|新|深|美)).)*$"}
   - {name: ♻️ 日本自动, type: url-test, include-all: true, tolerance: 20, interval: 300, filter: "(?=.*(日|JP|(?i)Japan))^((?!(港|台|韩|新|美|尼日利亚)).)*$" }
   - {name: ♻️ 美国自动, type: url-test, include-all: true, tolerance: 20, interval: 300, filter: "(?=.*(广美|美|USA|United States|纽约|波特兰|达拉斯|俄勒|凤凰城|费利蒙|拉斯|洛杉|圣何塞|圣克拉|西雅|芝加))(?=^(?!.*(亚美尼亚|Armenia|洪都拉斯)).*$).*$"}
   - {name: ♻️ 新国自动, type: url-test, include-all: true, tolerance: 20, interval: 300, filter: "(?=.*(广新|新加坡|SG|坡|狮城|🇸🇬|Singapore)).*$"}
   - {name: ♻️ 韩国自动, type: url-test, include-all: true, tolerance: 20, interval: 300, filter: "(?=.*(广韩|韩国|韓國|KR|首尔|春川|🇰🇷|Korea)).*$"}
   - {name: ♻️ 台湾自动, type: url-test, include-all: true, tolerance: 20, interval: 300, filter: "(?=.*(台|TW|(?i)Taiwan))^((?!(港|日|韩|新|美)).)*$"}
-  - {name: ♻️ 欧盟自动, type: url-test, include-all: true, tolerance: 20, interval: 300, filter: "(?i)欧盟|EU|德国|DE|法国|FR|意大利|IT|西班牙|ES|荷兰|NL|瑞典|SE|波兰|PL|爱尔兰|IE|比利时|BE|奥地利|AT|芬兰|FI|丹麦|DK|葡萄牙|PT|俄罗斯|RU|Germany|France|Italy|Spain|Netherlands|Sweden|Poland|Ireland|Belgium|Austria|Finland|Denmark|Portugal|Russia|法兰克福|Frankfurt|巴黎|Paris|阿姆斯特丹|Amsterdam"}
+  - {name: ♻️ 欧盟自动, type: url-test, include-all: true, tolerance: 20, interval: 300, filter: "(?i)欧盟|EU|英国|UK|俄罗斯|RU|德国|DE|法国|FR|意大利|IT|西班牙|ES|荷兰|NL|瑞典|SE|波兰|PL|爱尔兰|IE|比利时|BE|奥地利|AT|芬兰|FI|丹麦|DK|葡萄牙|PT|英|United Kingdom|Germany|France|Italy|Spain|Netherlands|Sweden|Poland|Ireland|Belgium|Austria|Finland|Denmark|Portugal|Russia|法兰克福|Frankfurt|巴黎|Paris|阿姆斯特丹|Amsterdam|伦敦|London"}
   - {name: ♻️ 自动选择, type: url-test, include-all: true, tolerance: 20, interval: 300, filter: "^((?!(直连)).)*$"}
   - {name: 🇭🇰 香港节点, type: select, include-all: true, filter: "(?i)港|hk|hongkong|hong kong"}
   - {name: 🇯🇵 日本节点, type: select, include-all: true, filter: "(?=.*(日|JP|(?i)Japan))^((?!(港|台|韩|新|美|尼日利亚)).)*$"}
@@ -176,7 +176,7 @@ proxy-groups:
   - {name: 🇸🇬 新国节点, type: select, include-all: true, filter: "(?=.*(广新|新加坡|SG|坡|狮城|🇸🇬|Singapore)).*$"}
   - {name: 🇰🇷 韩国节点, type: select, include-all: true, filter: "(?=.*(广韩|韩国|韓國|KR|首尔|春川|🇰🇷|Korea)).*$"}
   - {name: 🇹🇼 台湾节点, type: select, include-all: true, filter: "(?i)台|tw|taiwan"}
-  - {name: 🇪🇺 欧盟节点, type: select, include-all: true, filter: "(?i)欧盟|EU|德国|DE|法国|FR|意大利|IT|西班牙|ES|荷兰|NL|瑞典|SE|波兰|PL|爱尔兰|IE|比利时|BE|奥地利|AT|芬兰|FI|丹麦|DK|葡萄牙|PT|俄罗斯|RU|Germany|France|Italy|Spain|Netherlands|Sweden|Poland|Ireland|Belgium|Austria|Finland|Denmark|Portugal|Russia|法兰克福|Frankfurt|巴黎|Paris|阿姆斯特丹|Amsterdam"}
+  - {name: 🇪🇺 欧盟节点, type: select, include-all: true, filter: "(?i)欧盟|EU|英国|UK|俄罗斯|RU|德国|DE|法国|FR|意大利|IT|西班牙|ES|荷兰|NL|瑞典|SE|波兰|PL|爱尔兰|IE|比利时|BE|奥地利|AT|芬兰|FI|丹麦|DK|葡萄牙|PT|英|United Kingdom|Germany|France|Italy|Spain|Netherlands|Sweden|Poland|Ireland|Belgium|Austria|Finland|Denmark|Portugal|Russia|法兰克福|Frankfurt|巴黎|Paris|阿姆斯特丹|Amsterdam|伦敦|London"}
 
 # 用于IP敏感的专用嵌套策略组，手选+smart策略组。缺点：最长中断两分钟多。
 # , 🔒 港区-稳定IP, 🔒 日本-稳定IP, 🔒 美国-稳定IP, 🔒 新国-稳定IP, 🔒 韩国-稳定IP, 🔒 欧盟-稳定IP
@@ -189,7 +189,7 @@ proxy-groups:
   - {name: 🔒 欧盟-稳定IP, type: fallback, tolerance: 30, interval: 150, lazy: false, proxies: [🇪🇺 欧盟节点, ⭐ 欧盟智能] }
 
   - {name: 🏠 自建/家宽节点, type: select, include-all: true, filter: "(?i)(自建|CF|The_house|private|home)"}
-  - {name: 🌍 其他节点, type: select, include-all: true, filter: "^((?!(直连|拒绝|广港|香港|HK|Hong Kong|🇭🇰|HongKong|广台|台湾|台灣|TW|Tai Wan|🇹🇼|🇨🇳|TaiWan|Taiwan|广日|日本|JP|川日|东京|大阪|泉日|埼玉|沪日|深日|🇯🇵|Japan|广新|新加坡|SG|坡|狮城|🇸🇬|Singapore|广韩|韩国|韓國|KR|首尔|春川|🇰🇷|Korea|广美|美|USA|纽约|波特兰|达拉斯|俄勒|凤凰城|费利蒙|拉斯|洛杉|圣何塞|圣克拉|西雅|芝加|United States|欧盟|EU|德国|DE|法国|FR|意大利|IT|西班牙|ES|荷兰|NL|瑞典|SE|波兰|PL|爱尔兰|IE|比利时|BE|奥地利|AT|芬兰|FI|丹麦|DK|葡萄牙|PT|俄罗斯|RU|Germany|France|Italy|Spain|Netherlands|Sweden|Poland|Ireland|Belgium|Austria|Finland|Denmark|Portugal|Russia|法兰克福|Frankfurt|巴黎|Paris|阿姆斯特丹|Amsterdam)).)*$"}
+  - {name: 🌍 其他节点, type: select, include-all: true, filter: "^((?!(直连|拒绝|广港|香港|HK|Hong Kong|🇭🇰|HongKong|广台|台湾|台灣|TW|Tai Wan|🇹🇼|🇨🇳|TaiWan|Taiwan|广日|日本|JP|川日|东京|大阪|泉日|埼玉|沪日|深日|🇯🇵|Japan|广新|新加坡|SG|坡|狮城|🇸🇬|Singapore|广韩|韩国|韓國|KR|首尔|春川|🇰🇷|Korea|广美|美|USA|纽约|波特兰|达拉斯|俄勒|凤凰城|费利蒙|拉斯|洛杉|圣何塞|圣克拉|西雅|芝加|United States|欧盟|EU|英国|UK|俄罗斯|RU|德国|DE|法国|FR|意大利|IT|西班牙|ES|荷兰|NL|瑞典|SE|波兰|PL|爱尔兰|IE|比利时|BE|奥地利|AT|芬兰|FI|丹麦|DK|葡萄牙|PT|英|United Kingdom|Germany|France|Italy|Spain|Netherlands|Sweden|Poland|Ireland|Belgium|Austria|Finland|Denmark|Portugal|Russia|法兰克福|Frankfurt|巴黎|Paris|阿姆斯特丹|Amsterdam|伦敦|London)).)*$"}
   - {name: 🌐 全部节点, type: select, include-all: true}
 
 # 规则匹配
