--- a/yaml/Openclash-Smart-6.20.yaml
+++ b/yaml/Openclash-Smart-6.20.yaml
@@ -11,8 +11,8 @@
 
 # 机场订阅
 proxy-providers:
-  聚合机场-A:
-    url: "机场订阅链接A或者sub-store转换聚合后的订阅链接"
+  聚合机场:
+    url: "订阅链接4"
     type: http
     interval: 86400
     health-check:
@@ -21,8 +21,8 @@ proxy-providers:
       interval: 300
     proxy: 直连
 
-  机场-B:
-    url: "机场订阅链接B"
+  Airport_01:
+    url: "订阅链接1"
     type: http
     interval: 86400
     health-check:
@@ -30,8 +30,32 @@ proxy-providers:
       url: https://www.gstatic.com/generate_204
       interval: 300
     proxy: 直连
-    override:
-      additional-prefix: "[🛫机场-B] " # 给此机场机场-B的节点头部加名字，引号内名字可以改。
+    # override:
+      # additional-prefix: "[🛫机场-B] " # 给此机场机场-B的节点头部加名字，引号内名字可以改。
+
+  Airport_02:
+    url: "订阅链接2"
+    type: http
+    interval: 86400
+    health-check:
+      enable: true
+      url: https://www.gstatic.com/generate_204
+      interval: 300
+    proxy: 直连
+    # override:
+      # additional-prefix: "[🛫机场-B] " # 给此机场机场-B的节点头部加名字，引号内名字可以改。
+
+  Airport_03:
+    url: "订阅链接3"
+    type: http
+    interval: 86400
+    health-check:
+      enable: true
+      url: https://www.gstatic.com/generate_204
+      interval: 300
+    proxy: 直连
+    # override:
+      # additional-prefix: "[🛫机场-B] " # 给此机场机场-B的节点头部加名字，引号内名字可以改。
 
 # 多机场复制上方内容后改名字和url订阅链接即可,不能重复
 # 节点信息
@@ -76,6 +100,7 @@ dns:
   fake-ip-range: 198.20.0.1/16
   nameserver:
     - 223.5.5.5
+    - 119.29.29.29
   fake-ip-filter:
     - +.qeayr.cn
     - +.saojc.xyz
@@ -198,7 +223,7 @@ rules:
   - RULE-SET,netflix_domain,🎥 NETFLIX
   - RULE-SET,Disney_domain,🏰 Disney
   - RULE-SET,HBO_domain,📺 HBO
-  # - RULE-SET,Emby_domain-1,📽️ Emby
+  - RULE-SET,Emby_domain-1,📽️ Emby
   # - RULE-SET,Emby_domain-2,📽️ Emby
   # - RULE-SET,Emby_domain-3,📽️ Emby
   # - RULE-SET,Emby_domain-4,📽️ Emby
@@ -256,7 +281,7 @@ rule-providers:
   telegram_domain: { <<: *domain, url: "https://github.moeyy.xyz/https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/meta/geo/geosite/telegram.mrs"}
   netflix_domain: { <<: *domain, url: "https://github.moeyy.xyz/https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/meta/geo/geosite/netflix.mrs"}
   HBO_domain: {<<: *domain, url: "https://github.moeyy.xyz/https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/meta/geo/geosite/hbo.mrs"}
-  # Emby_domain-1: {<<: *class, url: "https://github.moeyy.xyz/https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo/geosite/classical/category-emby.list"}
+  Emby_domain-1: {<<: *class, url: "https://raw.githubusercontent.com/cendon-999/Rules/refs/heads/main/rules/Domain/emby.list"}
   # Emby_domain-2: {<<: *class, url: "https://github.moeyy.xyz/https://raw.githubusercontent.com/666OS/YYDS/refs/heads/main/mihomo/rules/emby.list"}
   # Emby_domain-3: {<<: *class, url: "https://github.moeyy.xyz/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Emby/Emby.list"}
   # Emby_domain-4: {<<: *class, url: "https://github.moeyy.xyz/https://raw.githubusercontent.com/ddgksf2013/Filter/refs/heads/master/Emby.list"}
